# synthetic-qa-paper

./: .gitignore  LICENSE  Makefile  README.md  SimpleRAG.ipynb  _run.ipynb  create_vector_db.py  customized_faiss.py  pyproject.toml  rag_utils.py  requirements.txt  ret_evals.py  run_rag.py  sample.yaml
caches/sample_experiment/: cached_augmented_generations.pkl  cached_queries.pkl  cached_reranked_rets.pkl
experiment_configs/: sample.yaml
notebooks/: analyze_sample_experiment.ipynb  experiment.ipynb
results/: readme.md
results/default_experiment/: config.json  results.csv
src/rag/: config.py  rag.py
src/ragbench/: __init__.py  prompt.py  rag.py  rag_utils.py
